--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
-[submodule "oh-my-zsh"]
+[submodule "prezto"]
 	path = oh-my-zsh
-	url = git://github.com/steeef/oh-my-zsh.git
-[submodule "vim/bundle/vundle"]
-	path = vim/bundle/vundle
-	url = http://github.com/gmarik/vundle.git
-[submodule "fonts/ttf-dejavu-powerline"]
-	path = fonts/ttf-dejavu-powerline
-	url = git://gist.github.com/1630581.git
+	url = https://github.com/sorin-ionescu/prezto.git
+[submodule "vim-slim"]
+  path = janus/vim-slim
+  url = https://github.com/bbommarito/vim-slim.git
+[submodule "vim-rails"]
+  path = janus/vim-rails
+  url = https://github.com/tpope/vim-rails.git
