--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "zprezto"]
 	path = zprezto
 	url = https://github.com/sorin-ionescu/prezto.git
+[submodule "janus/cvim-pathogen"]
+	path = janus/cvim-pathogen
+	url = git://github.com/HenningM/cvim-pathogen.git
